# frepi_finance_bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
deploy/: GCP_DEPLOYMENT.md  frepi-finance.service  setup.sh
docs/: DATA_FLOWS.md  PROMPT_ENGINEERING_GUIDE.md
frepi_finance/: __init__.py  config.py  main.py
frepi_finance/agent/: __init__.py  finance_agent.py  intent_detector.py  prompt_composer.py  prompt_logger.py
frepi_finance/integrations/: __init__.py  telegram_bot.py
frepi_finance/memory/: __init__.py  session_memory.py  user_memory.py
frepi_finance/services/: __init__.py  cashflow.py  cmv_calculator.py  engagement_scoring.py  heartbeat.py  invoice_parser.py  preference_drip.py  price_trend.py
frepi_finance/shared/: __init__.py  supabase_client.py  user_identification.py
frepi_finance/soul/: __init__.py  heartbeat.py  identity.py  soul.py
frepi_finance/soul/skills/: __init__.py  cmv_skill.py  invoice_skill.py  monthly_closure_skill.py  onboarding_skill.py  watchlist_skill.py
frepi_finance/tools/: __init__.py  cmv_tools.py  db_tools.py  invoice_tools.py  monthly_tools.py  onboarding_tools.py  preference_tools.py  watchlist_tools.py
migrations/: 001_finance_core.sql  002_menu_cmv.sql  003_watchlist_reports.sql
supabase/: config.toml
supabase/migrations/: 20260217120003_prompt_logging.sql
tests/: __init__.py  test_cmv_calculator.py  test_identity.py  test_intent_detector.py  test_invoice_parser.py  test_prompt_composer.py
